# newsph

./: CMakeLists.txt  README.md  config.json  config_exp1.json  config_exp2.json  config_exp3.json  config_exp4.json  main.cpp
config/: simulation_config.h
geometry/: plate.h  projectile.h
method/: kernel.h  particle.h  physics.h  sph.h
utils/: common.h  gemini_helpers.h  helpers.h  kernel.h  particle.h  physics.h  sph.h  vtk.h
